--- a/drogas.css
+++ b/drogas.css
@@ -1,41 +1,31 @@
-* {
-    margin: 0;
-    padding: 0;
+@import 'menu.css';
+
+.conteudo{
+    width: 100%;
+}
+.rodape{
+    width: 100%;
+    text-align: center;
+    background: rgb(7, 0, 105);
+}
+.img-mobile{
+    width: 100%;
 
 }
-
-.menu {
-   width: 100%;
-   height: 25px;
-   background-color: rgb(255, 0, 0);  
-   
+@media screen and (min-width:768px) {
+    .menu{
+        height: 120px;
+        background-color: rgb(0, 8, 124);
+    }
+    .conteudo-home{
+        display: flex;
+        padding: 10px;
+    }
 }
-.conteudo {
-   width: 100%;
-   background-color: #573cb6;
-   text-align: center;
-}
-.rodape { 
-   width: 100%;
-   text-align: center;
-   background-color: rgb(212, 214, 72);
-}
-.img-mobile {
-   width: 100%;
-
-}
-@media screen and (min-width:768px){
-   .menu{
-       height:100px;
-       background-color: aquamarine;
-   }
-}
-@media screen and (min-width:1280px){
-   .menu{
-       height:150px;
-       background-color: black;
-   }
-   .conteudo-home{
-      display: flex;
-   }
+@media screen and (min-width:1288px) {
+    .menu{
+        height: 120px;
+        background-color: rgb(0, 4, 221);
+    }
+    
 }
